adds note submission form to page

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -70,7 +70,7 @@
 
       <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="#">Home</a>
+          <a href="/dashboard">Dashboard</a>
           <a href="#">Open</a>
           <a href="#">Pending</a>
           <a href="#">Completed</a>
