--- a/views/details.html
+++ b/views/details.html
@@ -125,7 +125,7 @@
           <h1>Add Note</h1>
 
         <form 
-        action="/details" 
+        action="/details/${ticketId}" 
         method="POST"
         >
             <div class="form-group">
