--- a/views/completedTickets.html
+++ b/views/completedTickets.html
@@ -40,6 +40,18 @@
       </tr>
     </tbody>
   </table>
+  <div class="container">
+
+    <h5>Send SMS Message</h5>
+    <input type="tel" name="number" id="number" placeHolder="Enter Phone Number...">
+    <input type="text" name="msg" id="msg" placeHolder="Enter Text Message...">
+    <input type="button" id="button" value="Send Text..." class="button button-primary">
+    <p class="response"></p>
+  </div>
+
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/models/completedTickets.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
