--- a/views/allTickets.html
+++ b/views/allTickets.html
@@ -53,7 +53,12 @@
               Status
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Pending</a>
+              <div 
+              action="/pendingTickets"
+              method="POST">
+              <button type="submit">Pending</button>
+            </div>
+      
               <a class="dropdown-item" href="#">Complete</a>
             </div>
           </div>
