--- a/views/completedTickets.html
+++ b/views/completedTickets.html
@@ -48,13 +48,41 @@
     <h2>Send SMS Message</h2>
     <input type="tel" name="number" id="number" placeHolder="Enter Phone Number...">
     <input type="text" name="msg" id="msg" placeHolder="Enter Text Message...">
-    <input type="button" id="button" value="Send Text..." class="button button-primary">
+    <input type="button" id="button" onclick="send()" value="Send Text..." class="button button-primary">
     <p class="response"></p>
   </div>
 
+  <script>
+    const numberInput = document.getElementById('number'),
+      textInput = document.getElementById('msg'),
+      button = document.getElementById('button'),
+      response = document.querySelector('.response');
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js/message.js"></script>
+    button.addEventListener('click', send, false);
+
+    function send() {
+      const number = numberInput.value.replace(/\D/g, '');
+      const text = textInput.value;
+
+      fetch('/', {
+        method: 'post',
+        headers: {
+          'Content-type': 'application/json'
+        },
+        body: JSON.stringify({ number: number, text: textInput })
+      })
+        .then(function (res) {
+          console.log(res);
+        })
+        .catch(function (err) {
+          console.log(err);
+
+        })
+    }
+  </script>
+
+
+  <script src="/routes/completedTickets.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
