adds more styling

--- a/views/details.html
+++ b/views/details.html
@@ -12,7 +12,7 @@
         <style>
 
                 body {
-                  /* background-color: rgb(53,58,63); */
+                  background-color: rgb(116, 116, 116);
                   /* color: white; */
                   margin: 70px;
                   /* background-color: #2D2D2D; */
@@ -77,6 +77,7 @@
                     <a href="/allTickets">Open</a>
                     <a href="/pendingTickets">Pending</a>
                     <a href="/completedTickets">Completed</a>
+                    <a href="/homepage">Logout</a>
                   </div>
             
                 <div id="main">
