--- a/views/homepage.html
+++ b/views/homepage.html
@@ -11,7 +11,7 @@
 <body>
     <style>
         body {
-            background-color: #2D2D2D;
+            background-color: #232528;
         }
 
         .content {
@@ -32,7 +32,7 @@
 
         .thing-text {
             font-style: oblique;
-            color: orange;
+            color: #FF7700;
             transition: letter-spacing 2s;
         }
 
@@ -44,7 +44,7 @@
             font-family: 'Avenir';
             text-transform: uppercase;
             letter-spacing: 10px;
-            color: #FCCDA2;
+            color: #FFFFFA;
             font-size: 20px;
         }
 
@@ -61,17 +61,18 @@
 
         a:link,
         a:visited {
-            background-color: orange;
+            background-color: #FF7700;
             color: white;
             padding: 14px 25px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
+            border-radius: 10px;
         }
 
         a:hover,
         a:active {
-            background-color: rgb(225, 141, 15);
+            background-color: #515052;
         }
 
         h3 {
