--- a/views/login.html
+++ b/views/login.html
@@ -15,26 +15,28 @@
     <style>
 
       body {
-        background-color: #2D2D2D;
+        background-color: #232528;
         margin: 100px;
-        justify-content: center;
-        text-align: center;
+        /* justify-content: center;
+        text-align: center; */
       }
       
       h1 {
         font-family: 'Avenir';
-        color: orange;
+        color: #FF7700;
       }
 
       .form-group {
         color: white;
         text-align: left;
+        margin-bottom: 30px;
       }
       
       .btn {
         color: white;
-        background-color: orange;
-        margin: 15px;
+        background-color: #FF7700;
+        margin-bottom: 15px;
+        font-size: 16px;
       }
 
       img {
@@ -47,7 +49,7 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          background-color: #2D2D2D;
+          background-color: #232528;
           color: white;
           text-align:right;
           margin: 0px 150px 20px 0px;
@@ -84,6 +86,11 @@
                   <div class="footer">
                       <img src="/static/images/ticket-icon.png">
                       </div>
+
+  <script>
+
+  
+  </script>
     
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
