--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Dashboard</title>
+  <link rel="stylesheet" href="static/styling/sidenav.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -23,65 +24,25 @@
 
   <style>
     body {
-      background-color: rgb(53, 58, 63);
+      background-color:#232528;
       color: white;
       margin: 70px;
     }
 
-
-    .sidenav {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      transition: 0.5s;
-      padding-top: 60px;
+    .table {
+      background-color: #515052;
+      border-radius: 25px;
     }
 
-    .sidenav a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
+    h2 {
+    color: rgb(41, 41, 41);
+    background-color: #FFFFFA;
+    width: 100%;
+    border-radius: 25px;
+    padding: 5px 20px 5px 17px;
+    margin-bottom: 20px;
+  }
 
-    .sidenav a:hover {
-      color: orange;
-    }
-
-    .sidenav .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-    }
-
-    #main {
-      transition: margin-left .5s;
-      padding: 16px;
-    }
-
-    @media screen and (max-height: 450px) {
-      .sidenav {
-        padding-top: 15px;
-      }
-
-      .sidenav a {
-        font-size: 18px;
-      }
-    }
-
-    @media screen and (max-height: 450px) {
-          .sidenav {padding-top: 15px;}
-          .sidenav a {font-size: 18px;}
-    }
   </style>
 
 <script>
@@ -99,21 +60,21 @@
           </script>
           
           
-          
           <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="/dashboard">Dashboard</a>
             <a href="/allTickets">Open</a>
             <a href="/pendingTickets">Pending</a>
             <a href="/completedTickets">Completed</a>
+            <a href="/homepage">Logout</a>
           </div>
           
           <div id="main">
-            <span style="font-size:50px;cursor:pointer;display:flex;justify-content:flex-start;" onclick="openNav()">&#9776;
+            <span style="font-size:50px;cursor:pointer;display:flex;justify-content:flex-start;color:#FF7700;" onclick="openNav()">&#9776;
             </span>
 
 
-          <h1>Welcome back, ${firstName}</h1>
+          <h1>Welcome back, ${firstName}!</h1>
           
 
 
@@ -124,15 +85,15 @@
 
         </ol>
       </nav> -->
-    <a class="btn btn-primary" href="/allTickets" role="button">View All Tickets</a>
+    <!-- <a class="btn btn-primary" href="/allTickets" role="button">View All Tickets</a>
 
     <a class="btn btn-primary" href="/openTickets" role="button">View Open Tickets</a>
 
     <a class="btn btn-primary" href="/pendingTickets" role="button">View Pending Tickets</a>
 
-    <a class="btn btn-primary" href="/completedTickets" role="button">View Completed Tickets</a>
+    <a class="btn btn-primary" href="/completedTickets" role="button">View Completed Tickets</a> -->
 
-    <h1>Open Tickets</h1>
+    <h2>Open Tickets</h2>
 
     <table class="table table-dark">
       <thead>
@@ -157,7 +118,7 @@
     </table>
 
 
-    <h1>Pending Tickets</h1>
+    <h2>Pending Tickets</h2>
 
     <table class="table table-dark">
       <thead>
@@ -190,7 +151,7 @@
       </tbody>
     </table>
 
-    <h1>Completed Tickets</h1>
+    <h2>Completed Tickets</h2>
 
     <table class="table table-dark">
       <thead>
