--- a/views/details.html
+++ b/views/details.html
@@ -112,6 +112,7 @@
                 <th scope="col">Notes</th>
                 <th scope="col">User</th>
                 <th scope="col">All Tickets Id</th>
+                <th scope="col">Time Posted</th>
               </tr>
             </thead>
             <tbody>
@@ -121,6 +122,7 @@
                 <td>${note.note_content}</td>
                 <td>${note.users_id}</td>
                 <td>${note.all_tickets_id}</td>
+                <td>${note.time_posted}</td>
                 ` }).join('') }
               </tr>
             </tbody>
