--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -63,10 +63,10 @@
           <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/allTickets">Open</a>
+            <a href="/openTickets">Open</a>
             <a href="/pendingTickets">Pending</a>
             <a href="/completedTickets">Completed</a>
-            <a href="/homepage">Logout</a>
+            <a href="/">Logout</a>
           </div>
           
           <div id="main">
@@ -75,135 +75,112 @@
 
 
           <h1>Welcome back, ${firstName}!</h1>
-          
-
-
-    <!-- <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/login">Login</a></li>
-          <li class="breadcrumb-item aria-current="page><a href="/dashboard">Dashboard</a></li>
-
-        </ol>
-      </nav> -->
-    <!-- <a class="btn btn-primary" href="/allTickets" role="button">View All Tickets</a>
-
-    <a class="btn btn-primary" href="/openTickets" role="button">View Open Tickets</a>
-
-    <a class="btn btn-primary" href="/pendingTickets" role="button">View Pending Tickets</a>
-
-    <a class="btn btn-primary" href="/completedTickets" role="button">View Completed Tickets</a> -->
 
     <h2>Open Tickets</h2>
 
     <table class="table table-dark">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">All_tickets Id</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>1</td>
-          <td>1</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-
-      </tbody>
-    </table>
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Issue Description</th>
+            <th scope="col">Time Posted</th>
+            <th scope="col">Details</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${
+          openTickets.map((openIssue) => {
+          return `
+          <tr>
+            <th scope="row">${openIssue.id}</th>
+            <td>${openIssue.issue_desc}</td>
+            <td>${openIssue.time_posted}</td>
+            <td>
+              <form action="/details/${openIssue.id}" method="GET">
+                <button type="submit" value="${openIssue.id}" class="btn btn-info">Get Details</button>
+              </form>
+            </td>
+            <td>
+                <form action="/pendingTickets" method="POST">
+                  <button type="submit" value="${openIssue.id}" class="btn btn-info">pending</button>
+                </form>
+              </td>
+              ` }).join('') }
+            </tr>
+        </tbody>
+      </table>
 
 
     <h2>Pending Tickets</h2>
 
     <table class="table table-dark">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
-      </tbody>
-    </table>
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Issue Description</th>
+            <th scope="col">Time Posted</th>
+            <th scope="col">Details</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${
+          pendingTickets.map((allOpenTickets) => {
+          return `
+          <tr>
+            <th scope="row">${allOpenTickets.id}</th>
+            <td>${allOpenTickets.issue_desc}</td>
+            <td>${allOpenTickets.time_posted}</td>
+            <td>
+              <form action="/details/${allOpenTickets.id}" method="GET">
+                <button type="submit" value="${allOpenTickets.id}" class="btn btn-info">Get Details</button>
+              </form>
+            </td>
+            <td>
+                <form action="/pendingTickets" method="POST">
+                  <button type="submit" value="${allOpenTickets.id}" class="btn btn-info">pending</button>
+                </form>
+              </td>
+          </tr>
+            ` }).join('') }
+        </tbody>
+      </table>
 
     <h2>Completed Tickets</h2>
 
     <table class="table table-dark">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
-      </tbody>
-    </table>
-
-
-
-    <!-- WE WILL MOVE THIS REQUEST FORM TO ITS OWN PAGE -->
-
-    <!-- <h1>Submit Request Below</h1> -->
-
-
-    <!-- <form 
-      action="/allTickets" 
-      method="POST"
-      >
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Issue</label>
-              <input type="text" name="issue_desc" class="form-control" id="exampleFormControlInput1" placeholder="Issue">
-            </div>
-            <div class="form-group">
-              
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form> -->
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Issue Description</th>
+            <th scope="col">Time Posted</th>
+            <th scope="col">Details</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${
+          completedTickets.map((completedIssue) => {
+          return `
+          <tr>
+            <th scope="row">${completedIssue.id}</th>
+            <td>${completedIssue.issue_desc}</td>
+            <td>${completedIssue.time_posted}</td>
+            <td>
+              <form action="/details/${completedIssue.id}" method="GET">
+                <button type="submit" value="${completedIssue.id}" class="btn btn-info">Get Details</button>
+              </form>
+            </td>
+            <td>
+                <form action="/pendingTickets" method="POST">
+                  <button type="submit" value="${completedIssue.id}" class="btn btn-info">pending</button>
+                </form>
+              </td>
+              ` }).join('') }
+            </tr>
+        </tbody>
+      </table>
 
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
