--- a/views/openTickets.html
+++ b/views/openTickets.html
@@ -38,9 +38,9 @@
         <td>${ticket.issue_desc}</td>
         <td>${ticket.time_posted}</td>
         <td>
-            <form action="/pendingTickets" method="POST">
+            <!-- <form action="/pendingTickets" method="POST">
               <button type="submit" class="btn btn-info">Get Details</button>
-            </form>
+            </form> -->
 
         </td>
         ` }).join('') }
