adds final styling

--- a/views/createUser.html
+++ b/views/createUser.html
@@ -12,14 +12,13 @@
     <style>
 
     body {
-        background-color: #2D2D2D;
+        background-color: #232528;
         margin: 100px;
-        text-align: center;
     }
     
     h1 {
         font-family: 'Avenir';
-        color: orange;
+        color: #FF7700;
     }
 
     .form-group {
@@ -29,8 +28,8 @@
     
     .btn {
         color: white;
-        background-color: orange;
-        margin: 15px;
+        background-color: #FF7700;
+        margin-top: 15px;
     }
 
     bolabel {
@@ -47,7 +46,7 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        background-color: #2D2D2D;
+        background-color: #232528;
         color: white;
         text-align:right;
         margin: 0px 150px 20px 0px;
