--- a/static/styling/sidenav.css
+++ b/static/styling/sidenav.css
@@ -5,7 +5,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #FF7700;
+    background-color: rgb(0, 0, 0);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -21,7 +21,7 @@
   }
 
   .sidenav a:hover {
-    color: rgb(0, 0, 0);
+    color: rgb(213, 110, 20);
     text-decoration: none;
   }
 
