--- a/views/allTickets.html
+++ b/views/allTickets.html
@@ -6,31 +6,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Ticket Page</title>
+  <link rel="stylesheet" href="static/styling/sidenav.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
 
+<style>
+    body {
+      background-color:#232528;
+      color: white;
+      margin: 80px;
+      align-items: center;
+    }
+
+    .table {
+      background-color: #515052;
+    }
+
+    h2 {
+    color: rgb(41, 41, 41);
+    background-color: #FFFFFA;
+    width: 100%;
+    border-radius: 25px;
+    padding: 5px 20px 5px 17px;
+    margin-bottom: 20px;
+  }
+
+  </style>
+
+<script>
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+    }
+    
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft= "0";
+    }
+</script>
+
 <body>
-  <h1>${message}</h1>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="/dashboard">Dashboard</a>
+  <a href="/allTickets">Open</a>
+  <a href="/pendingTickets">Pending</a>
+  <a href="/completedTickets">Completed</a>
+  <a href="/">Logout</a>
+</div>
+
+<div id="main">
+  <span style="font-size:50px;cursor:pointer;display:flex;justify-content:flex-start;color:#FF7700;" onclick="openNav()">&#9776;
+    </span>
+ 
+
+  <h1>All Tickets</h1>
 
 
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/login">Login</a></li>
-      <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a href="/allTickets">All Tickets</a></li>
-    </ol>
-  </nav>
-
-
-  <table class="table">
+  <table class="table table-dark">
     <thead>
       <tr>
         <th scope="col">Id</th>
         <th scope="col">Issue Description</th>
         <th scope="col">Time Posted</th>
         <th scope="col">Details</th>
-        <th scope="col">Status</th>
+        <th scope="col">Click To Start</th>
       </tr>
     </thead>
     <tbody>
@@ -50,7 +92,7 @@
         <td>
 
             <form action="/pendingTickets/${issue.id}" method="GET">
-              <button type="submit" value="${issue.id}" class="btn btn-info" onclick="sentToPendingAlert();">Pending</button>
+              <button type="submit" value="${issue.id}" class="btn btn-success" onclick="sentToPendingAlert();">Start Ticket</button>
             </form>
 
         </td>
@@ -64,17 +106,7 @@
     </tbody>
   </table>
 
-  <!-- <script>
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-      }
-      
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("main").style.marginLeft= "0";
-      }
-  </script> -->
+    </div>
 
   <script>
       function sentToPendingAlert(){
@@ -91,6 +123,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
