--- a/views/homepage.html
+++ b/views/homepage.html
@@ -21,6 +21,7 @@
             flex-direction: column;
             align-items: center;
             margin: 80px;
+            text-align: center;
         }
 
         h1 {
@@ -33,11 +34,11 @@
         .thing-text {
             font-style: oblique;
             color: #FF7700;
-            transition: letter-spacing 2s;
+            transition: letter-spacing 1s;
         }
 
         .thing-text:hover {
-            letter-spacing: 10px;
+            letter-spacing: 5px;
         }
 
         h4 {
