--- a/views/pendingTickets.html
+++ b/views/pendingTickets.html
@@ -11,18 +11,98 @@
 </head>
 
 <body>
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/login">Login</a></li>
-      <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="breadcrumb-item aria-current=" page>
-        <a href="/pendingTickets">Pending Tickets</a>
-      </li>
-    </ol>
-  </nav>
+    <style>
+
+        body {
+          background-color: #232528;
+          color: white;
+          margin: 80px;
+          /* background-color: #2D2D2D; */
+          /* color: white; */
+        }              
+  
+        .sidenav {
+          height: 100%;
+          width: 0;
+          position: fixed;
+          z-index: 1;
+          top: 0;
+          left: 0;
+          background-color: #111;
+          overflow-x: hidden;
+          transition: 0.5s;
+          padding-top: 60px;
+        }
+  
+        .sidenav a {
+          padding: 8px 8px 8px 32px;
+          text-decoration: none;
+          font-size: 25px;
+          color: #818181;
+          display: block;
+          transition: 0.3s;
+        }
+  
+        .sidenav a:hover {
+          color: rgba(255, 119, 0, 0.646);
+        }
+
+        .table {
+          background-color: #515052;
+        }
+  
+        .sidenav .closebtn {
+          position: absolute;
+          top: 0;
+          right: 25px;
+          font-size: 36px;
+          margin-left: 50px;
+        }
+
+        #text {
+          visibility: hidden;
+        }
+  
+        #main {
+          transition: margin-left .5s;
+          padding: 16px;
+        }
+  
+        @media screen and (max-height: 450px) {
+          .sidenav {padding-top: 15px;}
+          .sidenav a {font-size: 18px;}
+        }
+              
+  
+        </style>
+  
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/allTickets">Open</a>
+            <a href="/pendingTickets">Pending</a>
+            <a href="/completedTickets">Completed</a>
+            <a href="/">Logout</a>
+          </div>
+    
+        <div id="main">
+          <span style="font-size:50px;cursor:pointer;display:flex;justify-content:flex-start;color: #FF7700;" onclick="openNav()">&#9776; </span>
+      
+        
+        <script>
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+        }
+        
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+          document.getElementById("main").style.marginLeft= "0";
+        }
+        </script>
 
   <h1>${message}</h1>
-  <table class="table">
+  <table class="table table-dark">
     <thead>
       <tr>
         <th scope="col">Ticket Id</th>
@@ -45,9 +125,8 @@
             </td>
           <td>
               <form action="/completedTickets/${ticket.id}" method="GET">
-                <button type="submit" value="${ticket.id}" class="btn btn-info">Completed</button>
+                <button type="submit" value="${ticket.id}" class="btn btn-danger">Completed</button>
               </form>
-  
           </td>
         </tr>
         `)
