--- a/views/request.html
+++ b/views/request.html
@@ -14,13 +14,13 @@
 
   <style>
     body {
-      background-color: #2D2D2D;
+      background-color: #232528;
       margin: 100px;
     }
 
     h1 {
       font-family: 'Avenir';
-      color: orange;
+      color: #FF7700;
     }
 
     .form-group {
@@ -29,7 +29,7 @@
 
     .btn {
       color: white;
-      background-color: orange;
+      background-color: #FF7700;
     }
 
     img {
@@ -42,7 +42,7 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      background-color: #2D2D2D;
+      background-color: #232528;
       color: white;
       text-align: right;
       margin: 0px 150px 20px 0px;
