--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -12,7 +12,7 @@
 <body>
     <style>
         body {
-            background-color: #2D2D2D;
+            background-color: #232528;
         }
 
         .content {
@@ -20,7 +20,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 50px;
+            margin-top: 80px;
         }
 
         h1 {
@@ -32,22 +32,23 @@
 
         .thing-text {
             font-style: oblique;
-            color: orange;
+            color: #FF7700;
         }
 
         h4 {
             font-family: 'Avenir';
             text-transform: uppercase;
             letter-spacing: 10px;
-            color: #FCCDA2;
-            font-size: 20px;
+            color: #FFFFFA;
+            font-size: 18px;
+            text-align: center;
         }
 
         h2 {
             color: white;
             /* border: 2px solid orange; */
-            padding: 30px 50px;
-            margin: 30px;
+            /* padding: 30px 50px; */
+            /* margin: 30px; */
         }
 
         /* img {
@@ -56,17 +57,18 @@
     } */
         a:link,
         a:visited {
-            background-color: orange;
+            background-color: #FF7700;
             color: white;
             padding: 14px 25px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
+            border-radius: 10px;
         }
 
         a:hover,
         a:active {
-            background-color: rgb(225, 141, 15);
+            background-color: #515052;
         }
 
         h3 {
