--- a/views/completedTickets.html
+++ b/views/completedTickets.html
@@ -75,7 +75,6 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/allTickets">Open</a>
             <a href="/pendingTickets">Pending</a>
             <a href="/completedTickets">Completed</a>
             <a href="/">Logout</a>
@@ -97,7 +96,7 @@
         }
         </script>
 
-  <h1>Completed Tickets</h1>
+  <h1>All Completed Tickets</h1>
   <table class="table table-dark">
     <thead>
       <tr>
