--- a/views/pendingTickets.html
+++ b/views/pendingTickets.html
@@ -79,7 +79,6 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/allTickets">Open</a>
             <a href="/pendingTickets">Pending</a>
             <a href="/completedTickets">Completed</a>
             <a href="/">Logout</a>
@@ -108,7 +107,6 @@
         <th scope="col">Ticket Id</th>
         <th scope="col">Ticket Description</th>
         <th scope="col">Details</th>
-        <th scope="col">Change Status</th>
       </tr>
     </thead>
     <tbody>
@@ -123,14 +121,8 @@
                 <button type="submit" value="${ticket.id}" class="btn btn-info">Get Details</button>
               </form>
             </td>
-          <td>
-              <form action="/completedTickets/${ticket.id}" method="GET">
-                <button type="submit" value="${ticket.id}" class="btn btn-danger">Completed</button>
-              </form>
-          </td>
         </tr>
-        `)
-        }
+        `).join('')}
     </tbody>
   </table>
 
