fixes details html page

--- a/views/completedTickets.html
+++ b/views/completedTickets.html
@@ -122,14 +122,14 @@
   </table>
   <form action="/completedTickets" method="POST">
   </form>
-  <div class="container">
+  <!-- <div class="container">
 
     <h2>Send SMS Message</h2>
     <input type="tel" name="number" id="number" placeHolder="Enter Phone Number...">
     <input type="text" name="msg" id="msg" placeHolder="Enter Text Message...">
     <input type="button" id="button" value="Send Text..." class="button button-primary">
     <p class="response"></p>
-  </div>
+  </div> -->
 
 
   <script src="/socket.io/socket.io.js"></script>
