--- a/views/details.html
+++ b/views/details.html
@@ -104,7 +104,7 @@
 
     <h1>Ticket Details</h1>
 
-    <h3>Description should go here. </h3>
+    <h3>${ticketDesc}</h3>
     
     <table class="table table-dark">
             <thead>
@@ -116,7 +116,8 @@
               </tr>
             </thead>
             <tbody>
-              ${ detail.map((note) => { return `
+              ${ detail.filter(note => note.note_content != null)
+                .map((note) => { return `
               <tr>
                 <td>${note.id}</td>
                 <td>${note.note_content}</td>
